k8s/my_sql_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: my-sql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: my-sql
          image: mysql:8.0
          ports:
            - containerPort: 3306
