k8s/tool_app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tools-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tools-app
  template:
    metadata:
      labels:
        app: tools-app
    spec:
      containers:
        - name: tools-application
          image: kozijakinfo/tools-api:2.0
          ports:
          - containerPort: 8080
