k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: my-sql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: my-sql
          image: mysql:8.0
          volumeMounts:
          - mountPath: /var/lib/mysql
            name: app-storage
          ports:
            - containerPort: 3306
      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: app-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  type: ClusterIP
