k8s/tool_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tools-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tools-app
  template:
    metadata:
      labels:
        app: tools-app
    spec:
      containers:
        - name: tools-application
          image: kozijakinfo/tools-api:2.0
          ports:
          - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/health"
              port: 8080
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 30
            httpGet:
              path: "/health"
              port: 8080
          resources:
            requests:
              memory: 200Mi
              cpu: 300m
            limits:
              memory: 400Mi
              cpu: 600m
---
apiVersion: v1
kind: Service
metadata:
  name: tools-app-service
spec:
  selector:
    app: tools-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
