k8s/tool_app_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tools-app-service
spec:
  selector:
    name: tools-app
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
